<resources>
    <string name="app_name">Guess The Word</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="new_game_button">New game</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="enter_the_player_name">Enter the player name</string>
    <string name="name_error">You did not enter a player name</string>
    <string name="new_game_error">You must enter at least 2 players</string>
    <string name="next">Next</string>
    <string name="play">Play!</string>
    <string name="exit">Exit</string>
    <string name="continue_button">continue</string>
    <string name="table_player_name">Player Name</string>
    <string name="table_game_count">G</string>
    <string name="table_score">S</string>
    <string name="picked_player_text">Next Player: %s</string>
    <string name="game_player_text">Player: %s</string>
    <string name="picked_player_hint_text">(you can change it by clicking on the name)</string>
    <string name="button_description">button</string>
</resources>
