<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.stats.StatsFragment">

    <TextView
        android:id="@+id/table_header_player_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/table_header_game_count"
        android:text="@string/table_player_name"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:background="@drawable/table_item_bg"
        android:paddingEnd="20dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/table_header_game_count"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/table_item_bg"
        app:layout_constraintBottom_toBottomOf="@id/table_header_player_name"
        app:layout_constraintEnd_toStartOf="@id/table_header_score"
        android:text="@string/table_game_count"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/table_header_score"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/table_item_bg"
        app:layout_constraintBottom_toBottomOf="@id/table_header_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/table_score"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_stats_players"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_header_player_name"
        app:layout_constraintBottom_toTopOf="@id/picked_player_text"/>

    <TextView
        android:id="@+id/picked_player_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Will answer: Andrey"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toTopOf="@id/picked_player_hint_text"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/picked_player_hint_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/picked_player_hint_text"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/exit_button"
        style="@style/button"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/play_button"
        style="@style/button"
        android:text="@string/play"
        app:layout_constraintStart_toEndOf="@id/exit_button"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/bottom_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>